--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,5 @@
     "isolatedModules": true
   },
   "exclude": ["./dist/**/*", "./node_modules/**/*"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/utils/gtag.ts"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/utils/GoogleAnalytics4.ts"]
 }
